@@ -41,7 +41,7 @@ Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd
              person("Michael", "Chirico", role="ctb", comment = c(ORCID = "0000-0003-0787-087X")),
              person("Kevin", "Ushey", role="ctb", comment = c(ORCID = "0000-0003-2880-7407")),
              person("Carl", "Pearson", role="ctb", comment = c(ORCID = "0000-0003-0701-7860")))
-Version: 0.6.37.1
+Version: 0.6.37.1.1
 Date: 2024-08-20
 Title: Create Compact Hash Digests of R Objects
 Description: Implementation of a function 'digest()' for the creation of hash
