@@ -27,16 +27,11 @@ sha1 <- function(x, digits = 14L, zapsmall = 7L, ..., algo = "sha1"){
 
 sha1.default <- function(x, digits = 14L, zapsmall = 7L, ..., algo = "sha1") {
     if (is.list(x)) {
-        return(
-            sha1.list(x, digits = digits, zapsmall = zapsmall, ..., algo = algo)
-        )
+        return(sha1.list(x, digits = digits, zapsmall = zapsmall, ..., algo = algo))
     }
-    stop(  							# #nocov start
-        "sha1() has no method for the '",
-        paste(class(x), collapse = "', '"),
-        "' class",
-        call. = FALSE
-    )								# #nocov end
+    message("sha1() has no method for the '", paste(class(x), collapse = "', '"),
+            "' class, so using fallback.")
+    sha1_attr_digest(x = x, digits = digits, zapsmall = zapsmall, ..., algo = algo)
 }
 
 sha1.numeric <- function(x, digits = 14L, zapsmall = 7L, ..., algo = "sha1"){
@@ -312,6 +307,8 @@ sha1.factor <- function(...) {sha1_attr_digest(...)}
 sha1.logical <- function(...) {sha1_attr_digest(...)}
 sha1.integer <- function(...) {sha1_attr_digest(...)}
 sha1.raw <- function(...) {sha1_attr_digest(...)}
+sha1.environment <- function(...) { sha1_attr_digest(...) }
+`sha1.<-` <- function(...) { sha1_attr_digest(...) }
 
 # sha1_digest variants ####
 
