@@ -494,3 +494,26 @@ saveRDS(x, f)
 y <- readRDS(f)
 expect_identical(sha1(x), sha1(y))
 expect_identical(sha1(x, environment = FALSE), sha1(y, environment = FALSE))
+
+# Check that default sha1 method works for many types
+# Class: <-
+expect_true(is.character(sha1(str2lang("a <- b"))))
+# Class: character
+expect_true(is.character(sha1("a")))
+# Class: call
+expect_true(is.character(sha1(str2lang("a(b)"))))
+# Class: environment
+expect_true(is.character(sha1(new.env())))
+# Class: factor
+expect_true(is.character(sha1(factor())))
+# Class: integer
+expect_true(is.character(sha1(1L)))
+# Class: raw
+expect_true(is.character(sha1(as.raw(1))))
+
+# Check that the expected warning is given for sha1.default usage and that a result is produced
+expect_message(
+    sha1(logLik(lmx <- lm(x ~ 1, data = data.frame(x = 1:5)))),
+    pattern = "sha1\\(\\) has no method for the 'logLik' class, so using fallback\\."
+)
+expect_true(is.character(sha1(logLik(lmx <- lm(x ~ 1, data = data.frame(x = 1:5))))))
