@@ -25,6 +25,8 @@
 \alias{sha1.raw}
 \alias{sha1.formula}
 \alias{sha1.(}
+\alias{sha1.environment}
+\alias{sha1.<-}
 \title{Calculate a SHA1 hash of an object}
 \author{Thierry Onkelinx}
 \usage{
@@ -56,6 +58,8 @@ sha1_attr_digest(x, digits = 14, zapsmall = 7, ..., algo = "sha1")
 \method{sha1}{integer}(...)
 \method{sha1}{logical}(...)
 \method{sha1}{raw}(...)
+\method{sha1}{environment}(...)
+\method{sha1}{`<-`}(...)
 }
 \arguments{
 \item{x}{the object to calculate the SHA1}
